Work on new top-level UI

--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>642</width>
-    <height>600</height>
+    <width>795</width>
+    <height>658</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,44 +18,190 @@
     <normaloff>:/app-icon-large</normaloff>:/app-icon-large</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
     <property name="leftMargin">
-     <number>6</number>
+     <number>2</number>
     </property>
     <property name="topMargin">
-     <number>8</number>
+     <number>2</number>
     </property>
     <property name="rightMargin">
-     <number>6</number>
+     <number>2</number>
     </property>
     <property name="bottomMargin">
-     <number>4</number>
+     <number>2</number>
     </property>
     <item>
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="currentIndex">
-       <number>4</number>
+     <widget class="QFrame" name="toolbox">
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>255</red>
+            <green>255</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>8</red>
+            <green>84</green>
+            <blue>236</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>255</red>
+            <green>255</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>8</red>
+            <green>84</green>
+            <blue>236</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>8</red>
+            <green>84</green>
+            <blue>236</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>8</red>
+            <green>84</green>
+            <blue>236</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
       </property>
-      <widget class="QWidget" name="summaryTab">
-       <attribute name="title">
-        <string>Summary</string>
-       </attribute>
-       <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0,0,0,0,0,0,2,0,0" columnstretch="0,0,0,1,0">
-        <item row="6" column="2">
-         <widget class="QLabel" name="label_5">
-          <property name="font">
-           <font>
-            <pointsize>16</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Settings:</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
-          </property>
-         </widget>
-        </item>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>0</number>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="ToolboxButton" name="summaryButton">
+         <property name="text">
+          <string>Summary</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-summary</normaloff>:/toolbox-summary</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ToolboxButton" name="aircraftButton">
+         <property name="text">
+          <string>Aircraft</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-aircraft</normaloff>:/toolbox-aircraft</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ToolboxButton" name="locationButton">
+         <property name="text">
+          <string>Location</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-location</normaloff>:/toolbox-location</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ToolboxButton" name="environmentButton">
+         <property name="text">
+          <string>Environment</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-environment</normaloff>:/toolbox-environment</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="ToolboxButton" name="settingsButton">
+         <property name="text">
+          <string>Settings</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-settings</normaloff>:/toolbox-settings</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="ToolboxButton" name="flyButton">
+         <property name="text">
+          <string>Fly!</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/toolbox-fly</normaloff>:/toolbox-fly</iconset>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QStackedWidget" name="stack">
+      <property name="currentIndex">
+       <number>2</number>
+      </property>
+      <widget class="QWidget" name="summaryPage" native="true">
+       <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0,0,0,0,0,0,0,0,0" columnstretch="0,0,0,0,0">
         <item row="5" column="2">
          <widget class="QLabel" name="label_3">
           <property name="font">
@@ -71,25 +217,27 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="4">
-         <widget class="QPushButton" name="aircraftHistory">
+        <item row="6" column="2">
+         <widget class="QLabel" name="label_5">
+          <property name="font">
+           <font>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Settings:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="4">
+         <widget class="QPushButton" name="locationHistory">
           <property name="autoDefault">
            <bool>false</bool>
           </property>
          </widget>
-        </item>
-        <item row="0" column="3">
-         <spacer name="verticalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
         </item>
         <item row="3" column="2">
          <widget class="QLabel" name="label_4">
@@ -106,6 +254,13 @@
           </property>
          </widget>
         </item>
+        <item row="3" column="4">
+         <widget class="QPushButton" name="aircraftHistory">
+          <property name="autoDefault">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
         <item row="9" column="3" colspan="2">
          <spacer name="verticalSpacer_2">
           <property name="orientation">
@@ -118,21 +273,6 @@
            </size>
           </property>
          </spacer>
-        </item>
-        <item row="3" column="3">
-         <widget class="QLabel" name="aircraftName">
-          <property name="font">
-           <font>
-            <pointsize>16</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>aircraft</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
         </item>
         <item row="4" column="3" colspan="2">
          <widget class="QLabel" name="aircraftDescription">
@@ -149,10 +289,46 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="4">
-         <widget class="QPushButton" name="locationHistory">
-          <property name="autoDefault">
-           <bool>false</bool>
+        <item row="0" column="3">
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="5" column="3">
+         <widget class="QLabel" name="locationDescription">
+          <property name="font">
+           <font>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>location</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QLabel" name="aircraftName">
+          <property name="font">
+           <font>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>aircraft</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -168,21 +344,6 @@
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="3">
-         <widget class="QLabel" name="locationDescription">
-          <property name="font">
-           <font>
-            <pointsize>16</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>location</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
@@ -210,25 +371,22 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="aircraftTab">
-       <attribute name="title">
-        <string>Aircraft</string>
-       </attribute>
+      <widget class="QWidget" name="aircraftPage" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0,0">
         <property name="spacing">
          <number>4</number>
         </property>
         <property name="leftMargin">
-         <number>4</number>
+         <number>0</number>
         </property>
         <property name="topMargin">
-         <number>8</number>
+         <number>2</number>
         </property>
         <property name="rightMargin">
-         <number>4</number>
+         <number>0</number>
         </property>
         <property name="bottomMargin">
-         <number>4</number>
+         <number>2</number>
         </property>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -316,29 +474,26 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="locationTab">
-       <attribute name="title">
-        <string>Location</string>
-       </attribute>
+      <widget class="QWidget" name="locationPage" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <property name="leftMargin">
-         <number>4</number>
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
         </property>
         <property name="rightMargin">
-         <number>4</number>
+         <number>0</number>
         </property>
         <property name="bottomMargin">
-         <number>4</number>
+         <number>0</number>
         </property>
         <item>
          <widget class="LocationWidget" name="location" native="true"/>
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="settingsTab">
-       <attribute name="title">
-        <string>Settings</string>
-       </attribute>
+      <widget class="QWidget" name="settingsPage" native="true">
        <layout class="QGridLayout" name="gridLayout_5">
         <property name="leftMargin">
          <number>8</number>
@@ -635,10 +790,7 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="settings2Tab">
-       <attribute name="title">
-        <string>New Settings</string>
-       </attribute>
+      <widget class="QWidget" name="newSettingsPage" native="true">
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="leftMargin">
          <number>4</number>
@@ -662,8 +814,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>614</width>
-             <height>507</height>
+             <width>613</width>
+             <height>624</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -738,52 +890,6 @@
       </widget>
      </widget>
     </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QPushButton" name="quitButton">
-        <property name="text">
-         <string>Quit</string>
-        </property>
-        <property name="autoDefault">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>412</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="runButton">
-        <property name="text">
-         <string>Run</string>
-        </property>
-        <property name="autoDefault">
-         <bool>false</bool>
-        </property>
-        <property name="default">
-         <bool>false</bool>
-        </property>
-        <property name="flat">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
    </layout>
   </widget>
  </widget>
@@ -793,6 +899,11 @@
    <extends>QWidget</extends>
    <header location="global">GUI/LocationWidget.hxx</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ToolboxButton</class>
+   <extends>QPushButton</extends>
+   <header location="global">GUI/ToolboxButton.h</header>
   </customwidget>
  </customwidgets>
  <resources>
